доработки и добавила картинки

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип Седона." src="images/svg/logo-sedona.svg"></a>
+          <img class="page-header-logo" alt="Логотип Седона." src="img/svg/logo-sedona.svg"></a>
         <nav class="navigattion">
         <ul class="navigation-list">
         <li class="navigation-item">
@@ -22,6 +22,9 @@
         <ul class="navigation-user">
           <li class="navigation-item-user">
             <a class="navigation-link-user" href="#">
+              <svg aria-hidden="true" focusable="false" width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="m19.026 17.05-3.71-3.7c1.002-1.3 1.704-3 1.704-4.9 0-4.4-3.61-8-8.023-8C4.585.45.975 4.15.975 8.55c0 4.4 3.61 8 8.022 8 1.805 0 3.51-.6 4.914-1.7l3.71 3.7 1.405-1.5Zm-10.029-2.5c-3.309 0-6.017-2.7-6.017-6s2.708-6 6.017-6c3.31 0 6.017 2.7 6.017 6s-2.707 6-6.017 6Z" fill="#000"/>
+              </svg>
               <span class="visually-hidden">Поиск</span></a>
   </li>
     <li class="navigation-item-user">
@@ -32,112 +35,124 @@
      <a class="button navigation-button" href="#">Хочу сюда!</a>
    </li>
    </ul>
- </header>
-    <asider class="main-background">
-      <figure class="main-background-block"
-      <img class="main-sedona-description" src="" alt="">
-    </figure>
-    </asider>
-    <section class="advantages">
-      <h1 class="main-header-text">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-      <p class="advantages-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ol class="advantages-list">
-          <li class="advantages-item">
-            <div class="advantages-imagine-block">
-            <div class="container-text">
-              <h3 class="advantages-title-white">Настоящий городок</h3>
-              <p class="advantages-numbers-white">— №1 —</p>
-              <p class="advantages-description-white">Седона — не аттракцион<br> для туристов, там течёт<br>
-          своя жизнь</p>
-            </div>
-            <div class="container-img"><img class="town" src="images/jpeg/true-city.jpg" width="800" height="384" alt="Город Седона"></div>
-                </div>
-        <ul class="advantages-list-icons">
-          <li class="advantages-item">
-            <img class="hotel" src="images/svg/icon-house.svg" width="75" height="72" alt="Иконка">
-            <h4 class="advantages-title-icons">Жильё</h4>
-            <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+   </header>
+   <main class="main-index">
+    <section class="promo-section">
+      <h1 class="visually-hidden">Welcome to the gorgeius Sedona "Becouse the grande canyon sucks!"</h1>
+      <img class="logo" alt="sedona logo" src="img/jpg/index-background.jpg" height="485" width="1200">
+      <img class="logo-welcome" alt="welcome-text" src="img/svg/welcome.svg" height="352" width="458">
+    </section>
+    <section class="start-text">
+      <h2>Седона — небольшой городок в Аризоне,
+        заслуживающий большего!</h2>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+    </section>
+    <ul class="adventages-list">
+      <li class="adventages-item">
+        <div>
+          <h3 class="adventages-title">Настоящий городок</h3>
+          <span class="adventages-description">— №1 —</span>
+          <p class="adventages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        </div>
+        <p><img src="img/jpg/photo-1.jpg" class="adventeges-img" alt="sedona picture" width="800" height="384"></p>
+        <ul class="adventages-list">
+          <li class="adventages-item">
+            <img src="img/svg/icon-house.svg" alt="house-icon" class="advanteges-icon"  width="74.7" height="72">
+            <h3 class="advanteges-title">Жилье</h3>
+            <p class="advanteges-description">Рекомендуем пожитьв настоящем мотеле,
+              всё как в кино!</p>
           </li>
-          <li class="advantages-icons">
-            <img class="burger" src="images/svg/icon-food.svg" width="74" height="70" alt="Иконка">
-            <h4 class="advantages-title-icons">Еда</h4>
-            <p class="advantages-icons-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <li class="adventages-item">
+            <img src="img/svg/icon-food.svg" alt="food-icon" class="advanteges-icon"  width="73.81" height="70">
+            <h3 class="advanteges-title">Еда</h3>
+            <p class="advanteges-description">Всегда заказывайте
+              топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantages-icons">
-            <img class="gift" src="images/svg/icon-presents.svg" width="64" height="76" alt="Иконка">
-            <h4 class="advantages-title-icons">Сувениры</h4>
-            <p class="advantages-icons-description">Не только китайского, но и настоящего местного производства!</p>
+          <li class="adventages-item">
+            <img src="img/svg/icon-presents.svg" alt="presents-icon" class="advanteges-icon"  width="64" height="75.95">
+            <h3 class="advanteges-title">Сувениры</h3>
+            <p class="advanteges-description">Не только китайского,
+              но и настоящего местного производства!</p>
           </li>
         </ul>
       </li>
-          <li class="advantages-item">
-            <div class="advantages-imagine-block">
-            <div class="container-img"><img class="bridge" src="images/jpeg/bridge-devil.jpg" width="800" height="384" alt="Мост Дьявола"></div>
-            <div class="container-text">
-              <h3 class="advantages-title-white">Там есть мост дьявола</h3>
-              <p class="advantages-numbers-white">— №2 —</p>
-              <p class="advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            </div>
-            </div>
-          </li>
-          <li class="advantages-item-block">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">— №3 —</p>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item-block">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">— №4 —</p>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item-block">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">— №5 —</p>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ol>
-      </section>
-      <section class="booking">
-        <h2 class="visually-hidden">Форма выбора отеля</h2>
-        <p class="booking-head">Заинтересовались?</p>
-        <p class="booking-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button button-all" href="#">Поиск гостиницы в седоне</a>
-      </section>
-    <footer class="page-footer">
-     <section class="newsletter">
-      <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-      <p class="page-fotter-title-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="visually-hidden" for="newsletter-email">Ваш e-mail</label>
-            <input class="field" placeholder="Ваш email" type="email" name="newsletter-email" id="newsletter-email" required>
-            <button class="button newsletter-button" type="submit">Подписаться</button>
-          </form>
-       </section>
-          <section class="footer-social">
-            <ul class="footer-social-list">
-            <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">ВКонтакте</span>
+      <li>
+        <p><img class="advanteges-img" src="img/jpg/photo-2.jpg" alt="kanyon"  width="800" height="384"></p>
+        <div>
+          <h3 class="advanteges-title">Не только китайского,
+            но и настоящего местного производства!</h3>
+          <span class="advanteges-description">— №2 —</span>
+          <p class="advanteges-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </div>
+      </li>
+      <li>
+        <h3 class="advanteges-title">Небольшая
+          площадь</h3>
+        <span class="advanteges-description">— №3 —</span>
+        <p class="advanteges-description">Все достопримечательности находятся очень близко</p>
+      </li>
+      <li>
+        <h3 class="advanteges-title">Красивая
+          дорога</h3>
+        <span class="advanteges-description">— №4 —</span>
+        <p class="advanteges-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </li>
+      <li>
+        <h3 class="advanteges-title">Мало
+          туристов</h3>
+        <span class="advanteges-description">— №5 —</span>
+        <p class="advanteges-description">Большинство едет в Гранд Каньон и толпится там</p>
+      </li>
+    </ul>
+    <section class="find-hotel">
+      <h2 class="hotel-title">Заинтересовались?</h2>
+      <p class="hotel-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в
+        Седоне
+      </p>
+      <button type="button" class="button">Поиск гостиницы в седоне</button>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <section class="subscription">
+      <img alt="sedona-mountains" src="img/jpg/background.jpg"  width="1200" height="401">
+      <h2 class="subscription-title">Подпишитесь на рассылку</h2>
+      <p class="sub-info">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+        <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newletter-email"
+          required>
+        <button class="button" type="submit"><span>ПОДПИСАТЬСЯ</span></button>
+      </form>
+    </section>
+    <div class="contacts">
+      <div class="social-link">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy" target="_blank">
+              <img alt="vk-logo" src="img/svg/Vk.svg"  width="24" height="14">
+              <span class="visually-hidden">VK</span>
             </a>
-            </li>
-            <li class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy ">
-            <span class="visually-hidden">Telegram</span>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy" target="_blank">
+              <img alt="telegram-logo" src="img/svg/telegram.svg"  width="18" height="15.1">
+              <span class="visually-hidden">Telegram</span>
             </a>
-            </li>
-            <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">YouTube</span>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+              <img alt="youtube-logo" src="img/svg/youtube.svg"  width="22" height="17">
+              <span class="visually-hidden">Youtube</span>
             </a>
-            </li>
-            </ul>
-            <footer class="page-footer">
-            <section class="footer-contacts">
-            <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-            <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
-          </section>
-         </body>
-       </main>
-  </body>
+          </li>
+        </ul>
+      </div>
+      <div class="phone">
+        <a class="contants-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </div>
+      <div class="footer-logo">
+        <img class="footer-img" src="img/svg/logo-html.svg" alt="html.academy" width="114.9" height="32.9">
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
