добавила графику для всех страниц

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <nav class="navigation">
       <div class="header-logo">
-        <img class="image-logo" alt="sedona-logo" src="img/svg/logo-sedona.svg" width="139" height="70">
+        <img class="image-logo" alt="sedona-logo" src="images/svg/logo-sedona.svg" width="139" height="70">
       </div>
       <ul class="navigation-list">
         <li class="navitation-item">
@@ -27,12 +27,13 @@
         <ul class="navigation-list naviration-user">
           <li class="navitation-item">
             <a href="#" class="navigation-link">
-              <img alt="search" src="img/svg/search.svg" width="18" height="18">
+              <img alt="search" src="images/svg/icon-search.svg" width="18" height="18">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item-user">
             <a class="navigation-link" href="#">
+              <img alt="favorite" src="images/svg/icon-favorite.svg" width="42" height="66">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -44,9 +45,10 @@
 
       <main class="main-index">
         <section class="promo-section">
-          <h1 class="visually-hidden">Welcome to the gorgeius Sedona "Becouse the grande canyon sucks!"</h1>
-          <img class="logo" alt="sedona logo" src="img/jpg/index-background.jpg" height="485" width="1200">
-          <img class="logo-welcome" alt="welcome-text" src="img/svg/welcome.svg" height="352" width="458">
+          <h1 class="visually-hidden">Седона</h1>
+          <img class="logo" alt="sedona logo" src="images/jpeg/index-background.jpg" height="485" width="1200">
+          <img class="logo-welcome" alt="welcome-text" src="images/svg/welcome-to-the-gorgeous-sedona-logo.svg" height="352" width="458">
+          <img class="logo-sedona-becouse" alt="sedona-becouse-text" src="images/svg/sedona-becouse-the-grande-canyon-sucks.svg" height="212" width="456">
         </section>
         <section class="start-text">
           <h2>Седона — небольшой городок в Аризоне,
@@ -61,29 +63,29 @@
             <p class="adventages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
           <p>
-            <img src="img/jpg/photo-1.jpg" class="adventeges-img" alt="sedona picture" width="800" height="384">
+            <img src="images/jpeg/a-real-town.jpg" class="adventeges-img" alt="sedona picture" width="800" height="384">
           </p>
           <ul class="adventages-list">
             <li class="adventages-item">
-              <img src="img/svg/icon-house.svg" alt="house-icon" class="advanteges-icon"  width="74" height="72"><h3 class="advanteges-title">Жилье</h3>
+              <img src="images/svg/icon-house.svg" alt="house-icon" class="advanteges-icon"  width="74" height="72"><h3 class="advanteges-title">Жилье</h3>
               <p class="advanteges-description">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="adventages-item">
-              <img src="img/svg/icon-food.svg" alt="food-icon" class="advanteges-icon"  width="73" height="70">
+              <img src="images/svg/icon-food.svg" alt="food-icon" class="advanteges-icon"  width="73" height="70">
               <h3 class="advanteges-title">Еда</h3>
               <p class="advanteges-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="adventages-item">
-              <img src="img/svg/icon-presents.svg" alt="presents-icon" class="advanteges-icon"  width="64" height="75">
+              <img src="images/svg/icon-souvenir.svg" alt="presents-icon" class="advanteges-icon"  width="64" height="75">
               <h3 class="advanteges-title">Сувениры</h3>
               <p class="advanteges-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
         </li>
         <li>
-          <p><img class="advanteges-img" src="img/jpg/photo-2.jpg" alt="kanyon"  width="800" height="384"></p>
+          <p><img class="advanteges-img" src="images/jpeg/devil's-bridge.jpg" alt="kanyon"  width="800" height="384"></p>
           <div>
-            <h3 class="advanteges-title">Не только китайского, но и настоящего местного производства!</h3>
+            <h3 class="advanteges-title">Там есть мост Дьявола</h3>
             <span class="advanteges-description">— №2 —</span>
             <p class="advanteges-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
@@ -112,7 +114,7 @@
     </main>
     <footer class="main-footer">
       <section class="subscription">
-        <img alt="sedona-mountains" src="img/jpg/background.jpg"  width="1200" height="401">
+        <img alt="sedona-mountains" src="images/jpeg/footer-background.jpg"  width="1200" height="401">
         <h2 class="subscription-title">Подпишитесь на рассылку</h2>
         <p class="sub-info">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -127,19 +129,19 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy" target="_blank">
-                <img alt="vk-logo" src="img/svg/Vk.svg"  width="24" height="14">
+                <img alt="vk-logo" src="images/svg/icon-vkontakte.svg"  width="24" height="14">
                 <span class="visually-hidden">VK</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="https://t.me/htmlacademy" target="_blank">
-                <img alt="telegram-logo" src="img/svg/telegram.svg"  width="18" height="15">
+                <img alt="telegram-logo" src="images/svg/icon-telegram.svg"  width="18" height="15">
                 <span class="visually-hidden">Telegram</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
-                <img alt="youtube-logo" src="img/svg/youtube.svg" width="22" height="17">
+                <img alt="youtube-logo" src="images/svg/icon-youtube.svg" width="22" height="17">
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
@@ -149,7 +151,7 @@
           <a class="contants-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </div>
         <div class="footer-logo">
-          <img class="footer-img" src="img/svg/logo-html.svg" alt="html.academy" width="114" height="32">
+          <img class="footer-img" src="images/svg/html-academy-logo.svg" alt="html.academy" width="114" height="32">
         </div>
       </div>
     </footer>
