--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <nav class="navigation">
       <div class="header-logo">
-        <img class="image-logo" alt="sedona-logo" src="img/svg/logo-sedona.svg" width="139" height="70">
+        <img class="image-logo" alt="sedona-logo" src="images/svg/logo-sedona.svg" width="139" height="70">
       </div>
       <ul class="navigation-list">
         <li class="navitation-item">
@@ -27,12 +27,13 @@
         <ul class="navigation-list naviration-user">
           <li class="navitation-item">
             <a href="#" class="navigation-link">
-              <img alt="search" src="img/svg/search.svg" width="18" height="18">
+              <img alt="search"src="images/svg/icon-search.svg" width="18" height="18">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item-user">
             <a class="navigation-link" href="#">
+              <img alt="favorite" src="images/svg/icon-favorite.svg" width="42" height="66">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -42,22 +43,20 @@
         </ul>
       </header>
       <main class="main-inner">
-        <div>
-          <img alt="sedona-mountains" src="img/jpg/сatalog.jpg" width="1200" height="393">
-          <section class="inner-section">
-            <h1 class="inner-header-title">Гостиницы Седоны</h1>
-            <ul class="breadcrumbs">
-              <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link" href="index-html"><img class="breadcrumbs-img" src="#" alt="home">
-                </a>
-              </li>
-              <li>
-                <a class="breadcrumbs-link">Гостиницы</a>
-              </li>
+        <div class="main-filter">
+        <header class="inner-header">
+          <h1 class="inner-header-title">Гостиницы Седоны</h1>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="index.html"><img src="images/svg/icon-home-page.svg"></a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link">Гостиницы</a>
+            </li>
             </ul>
           </section>
           <section class="catalog-products">
-            <h2 class="visually-hidden">Католог с продуктами</h2>
+            <h2 class="visually-hidden">Фильтры для выбора гостиниц</h2>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Инфраструктура:</legend>
@@ -110,73 +109,73 @@
             <option value="A-Z">A-Z</option>
           </select>
           <a class="button" href="#">
-            <span class="visually-hidden">Сетка</span>
-            <img alt="filter-grid" src="img/svg/mode-list.svg" width="16" height="14">
+            <span class="visually-hidden">Показать карточки</span>
+            <img alt="filter-grid" src="images/svg/icon-table.svg" width="16" height="14">
           </a>
           <a class="button" href="#">
-            <span class="visually-hidden">Описание</span>
-            <img alt="slideshow" src="img/svg/mode-slideshow.svg" width="16" height="14">
+            <span class="visually-hidden">Показать каждую карточку отдельно</span>
+            <img alt="slideshow" src="images/svg/icon-slideshow.svg" width="16" height="14">
           </a>
           <a class="button" href="#">
-            <span class="visually-hidden">Список</span>
-            <img alt="filter-list" src="img/svg/mode-list.svg" width="16" height="14">
+            <span class="visually-hidden">Показать список</span>
+            <img alt="filter-list" src="images/svg/icon-list.svg" width="16" height="14">
           </a>
           <ul class="product-list">
             <li class="product-card">
               <a class="product-link" href="product.html">
-                <img class="product-card-img" src="img/jpg/hotel-1.jpg" alt="beautiful-view" width="300" height="211">
-                <h3 class="product-card-title">Amara Resort & Spa</h3>
+                <img class="product-card-img" src="images/jpeg/amara-resort-spa.jpg" alt="Attractions near Amara Resort&Spa" width="300" height="211">
+                <h3 class="product-card-title">Amara Resort&Spa</h3>
               </a>
               <p class="product-card-text">Гостиница</p>
               <p class="product-card-price">От 4000 ₽</p>
               <a class="more" href="#">Подробнее</a>
               <a class="add" href="#">В избранное</a>
-              <img src="img/svg/star.svg" alt="stars-1" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-2" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-3" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-4" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-1" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-2" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-3" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-4" class="poduct-rating-stars" width="18" height="17">
               <p class="product-rating">Рейтинг: 8,5</p>
             </li>
             <li class="product-card">
               <a class="product-link" href="product.html">
-                <img class="product-card-img" src="img/jpg/photo-2.jpg" alt="mountains and rainbow" width="300" height="211">
+                <img class="product-card-img" src="images/jpeg/villas-at-poco-diablo.jpg" alt="Attractions near Villas at Poco Diablo" width="300" height="211">
                 <h3 class="product-card-title">Villas at Poco Diablo</h3>
               </a>
               <p class="product-card-text">Гостиница</p>
               <p class="product-card-price">От 5000 ₽</p>
               <a class="more" href="#">Подробнее</a>
               <a class="add" href="#">В избранном</a>
-              <img src="img/svg/star.svg" alt="stars-1" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-2" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-3" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-4" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-1" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-2" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-3" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-4" class="poduct-rating-stars" width="18" height="17">
               <p class="product-rating">Рейтинг: 9,2</p>
             </li>
             <li class="product-card">
               <a class="product-link" href="product.html">
-                <img class="product-card-img" src="img/jpg/hotel-3.jpg" alt="mountains and bushes"  width="300" height="211">
+                <img class="product-card-img" src="images/jpeg/desert-quail-inn.jpg" alt="Attractions near Desert Quail Inn"  width="300" height="211">
                 <h3 class="product-card-title">Desert Quail Inn</h3>
               </a>
               <p class="product-card-text">Гостиница</p>
               <p class="product-card-price">От 2500 ₽</p>
               <a class="more" href="#">Подробнее</a>
               <a class="add" href="#">В избранное</a>
-              <img src="img/svg/star.svg" alt="stars-1" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-2" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-3" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-1" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-2" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-3" class="poduct-rating-stars" width="18" height="17">
               <p class="product-rating">Рейтинг: 6,9</p>
             </li>
             <li class="product-card">
               <a class="product-link" href="product.html">
-                <img class="product-card-img" src="img/jpg/hotel-4.jpg" alt="night,stars and mountains" width="300" height="211">
+                <img class="product-card-img" src="images/jpeg/geentree-inn.jpg" alt="Attractions near GreenTree Inn" width="300" height="211">
                 <h3 class="product-card-title">GreenTree Inn</h3>
               </a>
               <p class="product-card-text">Гостиница</p>
               <p class="product-card-price">От 1500 ₽</p>
               <a class="more" href="#">Подробнее</a>
               <a class="add" href="#">В избранное</a>
-              <img src="img/svg/star.svg" alt="stars-1" class="poduct-rating-stars" width="18" height="17">
-              <img src="img/svg/star.svg" alt="stars-2" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-1" class="poduct-rating-stars" width="18" height="17">
+              <img src="images/svg/icon-star.svg" alt="stars-2" class="poduct-rating-stars" width="18" height="17">
               <p class="product-rating">Рейтинг: 5,0</p>
             </li>
           </ul>
@@ -222,19 +221,19 @@
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a class="button" href="https://vk.com/htmlacademy" target="_blank">
-                  <img alt="vk-logo" src="img/svg/Vk.svg" width="24" height="14">
+                  <img alt="vk-logo" src="images/svg/icon-vkontakte.svg" width="24" height="14">
                   <span class="visually-hidden">VK</span>
                 </a>
               </li>
               <li class="footer-social-item">
         <a class="button" href="https://t.me/htmlacademy" target="_blank">
-          <img alt="telegram-logo" src="img/svg/telegram.svg"  width="18" height="15">
+          <img alt="telegram-logo" src="images/svg/icon-telegram.svg"  width="18" height="15">
           <span class="visually-hidden">Telegram</span>
         </a>
       </li>
       <li class="footer-social-item">
         <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
-          <img alt="youtube-logo" src="img/svg/youtube.svg"  width="22" height="17">
+          <img alt="youtube-logo" src="images/svg/icon-youtube.svg"  width="22" height="17">
           <span class="visually-hidden">Youtube</span>
         </a>
       </li>
@@ -244,7 +243,7 @@
     <a class="contants-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
   </div>
   <div class="footer-logo">
-    <img class="footer-img" src="img/svg/logo-html.svg" alt="html.academy" width="114" height="32">
+    <img class="footer-img" src="images/svg/html-academy-logo.svg" alt="html.academy" width="114" height="32">
   </div>
 </div>
 </footer>
