--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -38,12 +39,12 @@
             </a>
           </li>
           <li class="navigation-item-user">
-            <a class="button navigation-button" href="#">Хочу сюда!</a>
+            <a class="navigation-button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </header>
       <main class="main-inner">
-        <div class="main-filter">
+        <div class="filter">
         <header class="inner-header">
           <h1 class="inner-header-title">Гостиницы Седоны</h1>
           <ul class="breadcrumbs">
@@ -98,8 +99,8 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="button" type="submit">Применить</button>
-              <button class="button" type="reset">Сбросить</button>
+              <button class="button-second" type="submit">Применить</button>
+              <button class="button-clear" type="reset">Сбросить</button>
             </form>
           </div>
           <h3 class="hotels-title">Найдено гостиниц: 38</h3>
@@ -199,11 +200,12 @@
               <a class="pagination-link" href="#">10</a>
             </li>
           </ul>
-
+          <div class="hotel-page">
           Гостиниц на странице:
           <select class="hotels-on-page">
             <option value="4" selected>4</option>
           </select>
+          </div>
       </main>
       <footer class="main-footer">
         <section class="subscription">
