--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -23,103 +24,104 @@
           <a href="hotels.html" class="navigation-link">Гостиницы</a>
         </li>
       </ul>
-    </nav>
-        <ul class="navigation-list naviration-user">
-          <li class="navitation-item">
-            <a href="#" class="navigation-link">
-              <img alt="search" src="images/svg/icon-search.svg" width="18" height="18">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="navigation-item-user">
+      <ul class="navigation-list">
+        <li class="navitation-item">
+          <a href="#" class="navigation-link">
+            <img alt="search" src="images/svg/icon-search.svg" width="18" height="18">
+            <span class="visually-hidden">Поиск</span>
+          </a>
+        </li>
+        <li class="navigation-item">
             <a class="navigation-link" href="#">
               <img alt="favorite" src="images/svg/icon-favorite.svg" width="42" height="66">
               <span class="visually-hidden">Избранное</span>
             </a>
-          </li>
-          <li class="navigation-item-user">
+        </li>
+         <li class="navigation-item-user">
             <a class="button navigation-button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </header>
 
       <main class="main-index">
+       <div class="main-logo">
         <section class="promo-section">
           <h1 class="visually-hidden">Седона</h1>
-          <img class="logo" alt="sedona logo" src="images/jpeg/index-background.jpg" height="485" width="1200">
           <img class="logo-welcome" alt="welcome-text" src="images/svg/welcome-to-the-gorgeous-sedona-logo.svg" height="352" width="458">
-          <img class="logo-sedona-becouse" alt="sedona-becouse-text" src="images/svg/sedona-becouse-the-grande-canyon-sucks.svg" height="212" width="456">
-        </section>
+       </section>
         <section class="start-text">
-          <h2>Седона — небольшой городок в Аризоне,
+          <h2>Седона — небольшой городок в Аризоне,<br>
         заслуживающий большего!</h2>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <p class="cause-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
-      <ul class="adventages-list">
-        <li class="adventages-item">
-          <div>
-            <h3 class="adventages-title">Настоящий городок</h3>
-            <span class="adventages-description">— №1 —</span>
-            <p class="adventages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+       </div>
+      <ul class="advantages-list">
+        <li class="advantages-item">
+          <div class="advantages-title-blue">
+            <h3 class="advantages-title-white">Настоящий городок</h3>
+            <span class="advantages-description-blue">— №1 —</span>
+            <p class="advantages-description-blue">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
-          <p>
-            <img src="images/jpeg/a-real-town.jpg" class="adventeges-img" alt="sedona picture" width="800" height="384">
-          </p>
-          <ul class="adventages-list">
-            <li class="adventages-item">
-              <img src="images/svg/icon-house.svg" alt="house-icon" class="advanteges-icon"  width="74" height="72"><h3 class="advanteges-title">Жилье</h3>
-              <p class="advanteges-description">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+          <div class="first-image"></div>
+            <img src="images/jpeg/a-real-town.jpg" class="advantages-img" alt="sedona picture" width="800" height="384">
+        </div>
+          <ul class="advantages-list-house">
+            <li class="advantages-item-pale">
+              <div class="advantages-housing">
+                 <img src="images/svg/icon-house.svg" alt="house-icon" class="advantages-icon"  width="74" height="72">
+                  <h3 class="advantages-title">Жилье</h3>
+                 <p class="advantages-description">Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+                </div>
             </li>
-            <li class="adventages-item">
-              <img src="images/svg/icon-food.svg" alt="food-icon" class="advanteges-icon"  width="73" height="70">
-              <h3 class="advanteges-title">Еда</h3>
-              <p class="advanteges-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <li class="advantages-item-white">
+              <img src="images/svg/icon-food.svg" alt="food-icon" class="advantages-icon"  width="73" height="70">
+              <h3 class="advantages-title">Еда</h3>
+              <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="adventages-item">
-              <img src="images/svg/icon-souvenir.svg" alt="presents-icon" class="advanteges-icon"  width="64" height="75">
-              <h3 class="advanteges-title">Сувениры</h3>
-              <p class="advanteges-description">Не только китайского, но и настоящего местного производства!</p>
+            <li class="advantages-item-pale">
+              <img src="images/svg/icon-souvenir.svg" alt="presents-icon" class="advantages-icon"  width="64" height="75">
+              <h3 class="advantages-title">Сувениры</h3>
+              <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
         </li>
         <li>
-          <p><img class="advanteges-img" src="images/jpeg/devil's-bridge.jpg" alt="kanyon"  width="800" height="384"></p>
-          <div>
-            <h3 class="advanteges-title">Там есть мост Дьявола</h3>
-            <span class="advanteges-description">— №2 —</span>
-            <p class="advanteges-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <div class="advantages-img" src="images/jpeg/devil's-bridge.jpg" alt="kanyon"  width="800" height="384"></div>
+          <div class="advantages-title-blue">
+            <h3 class="advantages-title-white">Там есть мост Дьявола</h3>
+            <span class="advantages-description-blue">— №2 —</span>
+            <p class="advantages-description-blue">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
         </li>
-        <li>
-          <h3 class="advanteges-title">Небольшая площадь</h3>
-          <span class="advanteges-description">— №3 —</span>
-          <p class="advanteges-description">Все достопримечательности находятся очень близко</p>
+        <li class="advantages-item-pale">
+          <h3 class="advantages-title">Небольшая площадь</h3>
+          <span class="advantages-description-number">— №3 —</span>
+          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
         </li>
-        <li>
-          <h3 class="advanteges-title">Красивая дорога</h3>
-          <span class="advanteges-description">— №4 —</span>
-          <p class="advanteges-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        <li class="semi-color">
+          <h3 class="advantages-title">Красивая дорога</h3>
+          <span class="advantages-description-number">— №4 —</span>
+          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li>
-          <h3 class="advanteges-title">Мало туристов</h3>
-          <span class="advanteges-description">— №5 —</span>
-          <p class="advanteges-description">Большинство едет в Гранд Каньон и толпится там</p>
+        <li class="advantages-item-pale">
+          <h3 class="advantages-title">Мало туристов</h3>
+          <span class="advantages-description-number">— №5 —</span>
+          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ul>
       <section class="find-hotel">
         <h2 class="hotel-title">Заинтересовались?</h2>
         <p class="hotel-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button type="button" class="button">Поиск гостиницы в седоне</button>
+        <button type="button" class="button-hotel">Поиск гостиницы в седоне</button>
       </section>
     </main>
     <footer class="main-footer">
       <section class="subscription">
-        <img alt="sedona-mountains" src="images/jpeg/footer-background.jpg"  width="1200" height="401">
         <h2 class="subscription-title">Подпишитесь на рассылку</h2>
         <p class="sub-info">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newletter-email" required>
-          <button class="button" type="submit">
+          <button class="button-subscribe" type="submit">
             <span>ПОДПИСАТЬСЯ</span>
           </button>
         </form>
